--- a/ImageProc/ImageProc.vcxproj
+++ b/ImageProc/ImageProc.vcxproj
@@ -147,6 +147,9 @@
     <ClInclude Include="src\stb_image.h" />
     <ClInclude Include="src\stb_image_write.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="res\images\nier.jpg" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
